--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@tanstack/react-query": "^5.24.1",
     "date-fns": "^3.3.1",
+    "firebase": "^10.7.1",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
-    "zustand": "^4.5.1",
-    "idb": "^8.0.0"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
